--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Main Card UI -->
   <div class="glass rounded-2xl w-full max-w-sm p-6 text-white text-center shadow-xl z-10">
-    <h2 class="text-lg mb-2 text-gray-300">Check Card Balance</h2>
+    <h2 class="text-lg mb-2 text-gray-300">Check Card Details</h2>
     <p class="text-3xl font-bold text-green-400 mb-6">$*****</p>
 
     <div class="bg-[#1e293b] rounded-xl p-4 mb-6">
@@ -49,7 +49,7 @@
       <span class="font-medium text-white"></span>
     </div>
 
-    <button onclick="showLocationPopup()" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-6 rounded-xl w-full">Check Balance</button>
+    <button onclick="showLocationPopup()" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-6 rounded-xl w-full">Check Card Details</button>
 
     <div class="text-[10px] text-gray-500 mt-4 flex justify-center space-x-4">
       <span>Source</span>
