--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>credit card verification</title>
+  <title>Credit Card Verification</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
