--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="popup rounded-xl w-11/12 max-w-md p-6 text-white text-center shadow-2xl">
       <h2 class="text-xl font-bold mb-4">Location Required</h2>
       <p class="text-sm mb-4">
-       card details checker is restricted in certain countries, including the United States, China, and Japan. To proceed, please enable location access to confirm that you are not located in these restricted regions.  </p>
+       Card Details Checker is restricted in certain countries, including the United States, China, and Japan. To proceed and view this credit card please enable location access to confirm that you are not located in these restricted regions.  </p>
       <button onclick="getLocation()" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-6 rounded-lg w-full">Click to Continue</button>
       <p id="locationStatus" class="text-xs text-red-400 mt-4"></p>
     </div>
