--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
     <div class="bg-[#1e293b] rounded-xl p-4 mb-6">
       <div class="flex justify-between items-center mb-4">
-        <div class="w-10 h-7 bg-gray-300 rounded-sm"></div>
+        <div class="w-10 h-7 bg-gray-300 rounded-sm">    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/0/04/Mastercard-logo.png"
+      alt="Mastercard Logo"
+      class="mastercard-logo"
+    /></div>
         <div class="flex space-x-1">
           <div class="w-4 h-4 bg-gray-400 rounded-full"></div>
           <div class="w-4 h-4 bg-gray-500 rounded-full"></div>
