--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <div class="card" role="main" aria-labelledby="title">
       <header class="card-header">
         <div class="countdown-timer" style="text-align: center; margin-bottom: 20px; color: var(--gold-1); font-weight: bold;">
-          <div id="countdown" style="font-size: 24px; text-shadow: 0 0 10px rgba(212,175,55,0.5);">24h 35m 12s</div>
+          <div id="countdyown" style="font-size: 24px; text-shadow: 0 0 10px rgba(212,175,55,0.5);">00h 00m 00s</div>
           <div style="font-size: 14px; margin-top: 5px;">Class Starts Today at 9:00 PM</div>
         </div>
         
